fanap/airflow/logs/dag_id=fpl_gameweeks_etl/run_id=manual__2025-10-30T152056.096940+0000/task_id=create_gw_stats_table/attempt=1.log
[2025-10-30T15:21:11.523+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fpl_gameweeks_etl.create_gw_stats_table manual__2025-10-30T15:20:56.096940+00:00 [queued]>
[2025-10-30T15:21:11.547+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fpl_gameweeks_etl.create_gw_stats_table manual__2025-10-30T15:20:56.096940+00:00 [queued]>
[2025-10-30T15:21:11.548+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2025-10-30T15:21:11.898+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_gw_stats_table> on 2025-10-30 15:20:56.096940+00:00
[2025-10-30T15:21:11.914+0000] {standard_task_runner.py:57} INFO - Started process 1712 to run task
[2025-10-30T15:21:11.922+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'fpl_gameweeks_etl', 'create_gw_stats_table', 'manual__2025-10-30T15:20:56.096940+00:00', '--job-id', '2604', '--raw', '--subdir', 'DAGS_FOLDER/fpl_gameweeks_dag.py', '--cfg-path', '/tmp/tmphekq1tho']
[2025-10-30T15:21:11.926+0000] {standard_task_runner.py:85} INFO - Job 2604: Subtask create_gw_stats_table
[2025-10-30T15:21:12.108+0000] {task_command.py:410} INFO - Running <TaskInstance: fpl_gameweeks_etl.create_gw_stats_table manual__2025-10-30T15:20:56.096940+00:00 [running]> on host 83097c7e7881
[2025-10-30T15:21:12.399+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='richardilemon' AIRFLOW_CTX_DAG_ID='fpl_gameweeks_etl' AIRFLOW_CTX_TASK_ID='create_gw_stats_table' AIRFLOW_CTX_EXECUTION_DATE='2025-10-30T15:20:56.096940+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-10-30T15:20:56.096940+00:00'
[2025-10-30T15:21:12.404+0000] {sql.py:265} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS player_gameweek_stats (
                season TEXT,
                gameweek INTEGER,
                player_name TEXT,
                # team_code INTEGER,
                fixture INTEGER,
                opponent_team INTEGER,
                goals_scored INTEGER,
                assists INTEGER,
                clean_sheets INTEGER,
                goals_conceded INTEGER,
                own_goals INTEGER,
                penalties_saved INTEGER,
                penalties_missed INTEGER,
                red_cards INTEGER,
                yellow_cards INTEGER,
                big_chances_missed INTEGER,
                big_chances_created INTEGER,
                clearance_blocks_interceptions INTEGER,
                completed_passes INTEGER,
                dribbles INTEGER,
                errors_leading_to_goal INTEGER,
                fouls INTEGER,
                key_passes INTEGER,
                open_play_crosses INTEGER,
                was_home BOOLEAN,
                winning_goals INTEGER,
                PRIMARY KEY (season, gameweek, player_name)
            );
        
[2025-10-30T15:21:12.443+0000] {base.py:73} INFO - Using connection ID 'fpl_db_conn' for task execution.
[2025-10-30T15:21:12.603+0000] {base.py:73} INFO - Using connection ID 'fpl_db_conn' for task execution.
[2025-10-30T15:21:12.633+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS player_gameweek_stats (
                season TEXT,
                gameweek INTEGER,
                player_name TEXT,
                # team_code INTEGER,
                fixture INTEGER,
                opponent_team INTEGER,
                goals_scored INTEGER,
                assists INTEGER,
                clean_sheets INTEGER,
                goals_conceded INTEGER,
                own_goals INTEGER,
                penalties_saved INTEGER,
                penalties_missed INTEGER,
                red_cards INTEGER,
                yellow_cards INTEGER,
                big_chances_missed INTEGER,
                big_chances_created INTEGER,
                clearance_blocks_interceptions INTEGER,
                completed_passes INTEGER,
                dribbles INTEGER,
                errors_leading_to_goal INTEGER,
                fouls INTEGER,
                key_passes INTEGER,
                open_play_crosses INTEGER,
                was_home BOOLEAN,
                winning_goals INTEGER,
                PRIMARY KEY (season, gameweek, player_name)
            );
        , parameters: None
[2025-10-30T15:21:12.635+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 277, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 6:                 # team_code INTEGER,
                        ^

[2025-10-30T15:21:12.661+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=fpl_gameweeks_etl, task_id=create_gw_stats_table, execution_date=20251030T152056, start_date=20251030T152111, end_date=20251030T152112
[2025-10-30T15:21:12.694+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 2604 for task create_gw_stats_table (syntax error at or near "#"
LINE 6:                 # team_code INTEGER,
                        ^
; 1712)
[2025-10-30T15:21:12.752+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-10-30T15:21:12.904+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
